logs/dag_id=booking_ingestion_v3/run_id=manual__2023-11-10T02:28:46.037801+00:00/task_id=copy_data_to_postgres/attempt=7.log
[2023-11-10T03:15:03.951+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:15:03.969+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:15:03.970+0000] {taskinstance.py:1361} INFO - Starting attempt 7 of 8
[2023-11-10T03:15:03.996+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): copy_data_to_postgres> on 2023-11-10 02:28:46.037801+00:00
[2023-11-10T03:15:04.005+0000] {standard_task_runner.py:57} INFO - Started process 501 to run task
[2023-11-10T03:15:04.011+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'booking_ingestion_v3', 'copy_data_to_postgres', 'manual__2023-11-10T02:28:46.037801+00:00', '--job-id', '17', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpznepgfwh']
[2023-11-10T03:15:04.014+0000] {standard_task_runner.py:85} INFO - Job 17: Subtask copy_data_to_postgres
[2023-11-10T03:15:04.104+0000] {task_command.py:416} INFO - Running <TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [running]> on host a3e6249bf7b5
[2023-11-10T03:15:04.251+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mike' AIRFLOW_CTX_DAG_ID='booking_ingestion_v3' AIRFLOW_CTX_TASK_ID='copy_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-11-10T02:28:46.037801+00:00' AIRFLOW_CTX_TRY_NUMBER='7' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-10T02:28:46.037801+00:00'
[2023-11-10T03:15:04.259+0000] {sql.py:274} INFO - Executing: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            
[2023-11-10T03:15:04.283+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:15:04.302+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:15:04.329+0000] {sql.py:418} INFO - Running statement: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            , parameters: None
[2023-11-10T03:15:04.335+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^

[2023-11-10T03:15:04.350+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=booking_ingestion_v3, task_id=copy_data_to_postgres, execution_date=20231110T022846, start_date=20231110T031503, end_date=20231110T031504
[2023-11-10T03:15:04.376+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 17 for task copy_data_to_postgres (syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^
; 501)
[2023-11-10T03:15:04.431+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-10T03:15:04.466+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
